# PyExpt

./: LICENSE  README.md  pyexpt.expts.html  pyproject.toml
docs/: conf.py  deploy.sh  index.md  index.rst
notebooks/: Example.ipynb
src/pyexpt/: datasets.py  expts.py
tests/: test_datasets.py  test_expts.py
