[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyExpt"
version = "0.1.2"
description = "A framework for algorithm experiments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn"
]

[project.urls]
Source = "https://github.com/benweishi/PyExpt"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pyexpt"]
